tests/macro_read/enum_validation.stderr
error: `type` or `id` must be specified on enum
 --> $DIR/enum_validation.rs:5:6
  |
5 | enum Test1 {}
  |      ^^^^^

error: conflicting: both `type` and `id` specified on enum
  --> $DIR/enum_validation.rs:10:6
   |
10 | enum Test2 {}
   |      ^^^^^

error: conflicting: both `id` and `id_pat` specified on variant
  --> $DIR/enum_validation.rs:16:17
   |
16 |     #[deku(id = "1", id_pat = "2..=3")] A(u8),
   |                 ^^^

error: `type` only supported on enum
  --> $DIR/enum_validation.rs:21:15
   |
21 | #[deku(type = "u8")]
   |               ^^^^

error: `bits` only supported on enum
  --> $DIR/enum_validation.rs:27:10
   |
27 | #[derive(DekuRead)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: `bits` only supported on enum
  --> $DIR/enum_validation.rs:34:10
   |
34 | #[derive(DekuRead)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: `id` only supported on enum
  --> $DIR/enum_validation.rs:42:13
   |
42 | #[deku(id = "test")]
   |             ^^^^^^

error: error: cannot use `bits` with `id`
  --> $DIR/enum_validation.rs:50:6
   |
50 | enum Test8 {
   |      ^^^^^

error: error: cannot use `id_bytes` with `id`
  --> $DIR/enum_validation.rs:57:6
   |
57 | enum Test9 {
   |      ^^^^^
